19991122-01:14 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/compiler/*
    include/compiler.h
    * Renamed two global variables
      hb_comp_szCErrors   -> hb_comp_szErrors
      hb_comp_szCWarnings -> hb_comp_szWarnings
  * include/hbsetup.h
    include/hbpp.h
    * IS_OPT_SEP() macro renamed to HB_ISOPTSEP() and moved to the right place.
  * source/pp/*
    include/hbpp.h
    source/compiler/harbour.l
    source/compiler/harbour.c
    * Variable renaming, prefixing, scope optimizing.
    * Global functions prefixed with 
    * Some ints changed to BOOL.
    ! Non-ANSI comment removed.
    % stroupper() changed to hb_strupr(), stroupper() removed.
    % strolen() changed to strlen(), strolen() removed.
  + source/common/hbstr.c (added)
    source/rtl/strings.c
    * hb_strupr() moved to the common library.
    % hb_strupr() Local variable optimized out.

19991121-23:23 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/pp/*
    include/hbpp.h
    ! static variables and functions marked static (continued).
    ! public pp variables prefixed with "hb_pp_".
    % pp_strAt() removed and calls replaced with common hb_strAt() function.
    * Cleaned up standard header file usage. (Please report any errors caused
      by this.)
    * static variables prefixed with "s_".
  * source/compiler/harbour.c
    source/compiler/harbour.y
    include/compiler.h
    source/pp/hbppint.c
    * Two PPO related variable declarations moved to the compiler.

19991121-22:38 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/pp/*
    source/compiler/harbour.c
    include/hbpp.h
    ! static variables and functions marked static.
    * Cleared up declarations, removed redundant declartions.
    * Some formatting.
  * source/pp/hbpp.c
    ! Some corrections made to better handle where the code launcher
      returns to the caller. This is a theoretical case, but it's more
      elegant to handle this case, and it would also help to avoid a jmp_buf